# libjingle

./: AUTHORS  CHANGELOG  ChangeLog  DEPS  DOCUMENTATION  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  codereview.settings  config.h  config.h.in  configure  configure.ac  get_third_party.sh
talk/: Makefile.am  Makefile.in  libjingle.gyp  libjingle.scons  libjingle.vcproj  libjingle_all.gyp  libjingle_examples.gyp  libjingle_tests.gyp  main.scons  supplement.gypi
talk/app/webrtc/: audiotrack.cc  audiotrack.h  candidateobserver.h  datachannel.cc  datachannel.h  datachannelinterface.h  dtmfsender.cc  dtmfsender.h  dtmfsender_unittest.cc  jsep.h  jsepicecandidate.cc  jsepicecandidate.h  jsepsessiondescription.cc  jsepsessiondescription.h  jsepsessiondescription_unittest.cc  jsepsignaling.cc  jsepsignaling.h  jsepsignaling_unittest.cc  localaudiosource.cc  localaudiosource.h  localaudiosource_unittest.cc  localvideosource.cc  localvideosource.h  localvideosource_unittest.cc  mediastream.cc  mediastream.h  mediastream_unittest.cc  mediastreamhandler.cc  mediastreamhandler.h  mediastreamhandler_unittest.cc  mediastreaminterface.h  mediastreamprovider.h  mediastreamproxy.cc  mediastreamproxy.h  mediastreamsignaling.cc  mediastreamsignaling.h  mediastreamsignaling_unittest.cc  mediastreamtrack.h  mediastreamtrackproxy.cc  mediastreamtrackproxy.h  (+60 more)
talk/app/webrtcv1/: peerconnectionfactory.cc  webrtcjson.cc  webrtcsession.cc  webrtcsession.h  webrtcsession_unittest.cc  webrtcv1.scons
talk/base/: Makefile.am  Makefile.in  asyncfile.h  asynchttprequest.cc  asynchttprequest.h  asynchttprequest_unittest.cc  asyncpacketsocket.cc  asyncpacketsocket.h  asyncsocket.h  asynctcpsocket.cc  asynctcpsocket.h  asyncudpsocket.cc  asyncudpsocket.h  autodetectproxy.cc  autodetectproxy.h  base.gyp  base64.cc  base64.h  basicdefs.h  basicpacketsocketfactory.cc  basictypes.h  basictypes_unittest.cc  bytebuffer.cc  bytebuffer.h  bytebuffer_unittest.cc  byteorder.h  common.cc  common.h  convert.h  cpumonitor.cc  criticalsection.h  cryptstring.h  dbus.cc  diskcache.cc  diskcache.h  diskcache_win32.cc  diskcache_win32.h  diskcachestd.cc  diskcachestd.h  event.cc  (+167 more)
talk/examples/: Makefile.am  Makefile.in
talk/examples/call/: Makefile.am  Makefile.in  call.vcproj  call_main.cc  call_main.cc~  callclient.cc  callclient.h  callclient_unittest.cc  console.cc  console.h  discoitemsquerytask.cc  discoitemsquerytask.h  friendinvitesendtask.h  mucinviterecvtask.h  mucinvitesendtask.cc  mucinvitesendtask.h  presenceouttask.cc  presenceouttask.h  presencepushtask.cc  presencepushtask.h  status.h  voicemailjidrequester.cc  voicemailjidrequester.h
talk/examples/login/: Makefile.am  Makefile.in  autoportallocator.h  jingleinfotask.cc  jingleinfotask.h  login_main.cc  presenceouttask.cc  presenceouttask.h  presencepushtask.cc  presencepushtask.h  status.h  xmppauth.cc  xmppauth.h  xmpppump.h  xmppsocket.cc  xmppsocket.h  xmppthread.cc  xmppthread.h
talk/examples/pcp/: Makefile.am  Makefile.in  pcp.vcproj  pcp_main.cc
talk/examples/plus/: presencepushtask.cc
talk/media/: media.gyp
talk/media/base/: audioframe.h  capturemanager.cc  capturemanager.h  capturemanager_unittest.cc  capturerenderadapter.cc  codec.cc  codec.h  codec_unittest.cc  constants.cc  constants.h  cpuid.cc  cpuid.h  dataengine.cc  dataengine.h  dataengine_unittest.cc  fakecapturemanager.h  fakemediaengine.h  fakemediaprocessor.h  fakenetworkinterface.h  fakevideocapturer.h  fakevideorenderer.h  filemediaengine.cc  filemediaengine.h  filemediaengine_unittest.cc  hybridvideoengine.cc  hybridvideoengine.h  mediachannel.h  mediacommon.h  mediaengine.cc  mediaengine.h  nullvideoframe.h  rtpdataengine.cc  rtpdataengine.h  rtpdataengine_unittest.cc  rtpdump.h  rtputils.cc  rtputils.h  rtputils_unittest.cc  screencastid.h  streamparams.cc  (+16 more)
talk/p2p/: Makefile.in
talk/p2p/base/: Makefile.am  Makefile.in  candidate.h  common.h  constants.cc  constants.h  dtlstransport.h  dtlstransportchannel.cc  dtlstransportchannel.h  dtlstransportchannel_unittest.cc  fakesession.h  p2ptransport.cc  p2ptransport.h  p2ptransportchannel.cc  p2ptransportchannel.h  p2ptransportchannel_unittest.cc  parsing.cc  parsing.h  port.cc  port.h  port_unittest.cc  portallocator.cc  portallocator.h  portallocatorsessionproxy.cc  portallocatorsessionproxy.h  portallocatorsessionproxy_unittest.cc  portinterface.h  portproxy.cc  portproxy.h  pseudotcp.cc  pseudotcp.h  pseudotcp_unittest.cc  rawtransport.cc  rawtransport.h  rawtransportchannel.cc  rawtransportchannel.h  relayport.cc  relayport.h  relayport_unittest.cc  relayserver.cc  (+50 more)
talk/p2p/client/: Makefile.am  Makefile.in  basicportallocator.cc  basicportallocator.h  connectivitychecker.cc  connectivitychecker.h  connectivitychecker_unittest.cc  fakeportallocator.h  httpportallocator.cc  httpportallocator.h  portallocator_unittest.cc  sessionmanagertask.h  sessionsendtask.h  socketmonitor.cc  socketmonitor.h
talk/session/: Makefile.am  Makefile.in
talk/site_scons/: talk.py
talk/sound/: alsasoundsystem.cc  pulseaudiosoundsystem.cc  sounddevicelocator.h
talk/xmllite/: Makefile.in  qname.h  xmlbuilder.cc  xmlbuilder.h  xmlelement.cc  xmlelement.h  xmlnsstack.cc  xmlparser.cc  xmlparser.h  xmlprinter.cc  xmlprinter_unittest.cc
talk/xmpp/: Makefile.am  Makefile.in  chatroommodule.h  chatroommodule_unittest.cc  chatroommoduleimpl.cc  constants.cc  constants.h  hangoutpubsubclient.cc  hangoutpubsubclient_unittest.cc  iqtask.cc  iqtask.h  jid.cc  jid.h  mucroomdiscoverytask.cc  mucroomdiscoverytask.h  mucroomdiscoverytask_unittest.cc  mucroomlookuptask.cc  mucroomlookuptask.h  prexmppauth.h  ratelimitmanager.cc  ratelimitmanager.h  rostermodule.h  rostermoduleimpl.cc  rostermoduleimpl.h  saslmechanism.cc  xmppclient.cc  xmppclient.h  xmppclientsettings.h  xmppengine.h  xmppengineimpl.cc  xmppengineimpl.h  xmpplogintask.cc  xmpplogintask.h  xmpplogintask_unittest.cc  xmpppump.cc  xmpppump.h  xmppsocket.cc  xmppsocket.h  xmppstanzaparser.cc  xmpptask.cc  (+3 more)
tools/valgrind-libjingle/: libjingle_tests.py
(+242 files in other folders)
