libcricketxmpp_la_SOURCES = constants.cc \
			    jid.cc \
			    saslmechanism.cc \
			    xmppclient.cc \
			    xmppengineimpl.cc \
			    xmppengineimpl_iq.cc \
			    xmpplogintask.cc \
			    xmppstanzaparser.cc \
			    xmpptask.cc \
			    ratelimitmanager.cc 

noinst_HEADERS = asyncsocket.h \
			    prexmppauth.h \
		    	    saslhandler.h \
		      	    xmpplogintask.h \
			    jid.h \
		    	    saslmechanism.h \
		      	    xmppclient.h \
                            constants.h \
		    	    saslplainmechanism.h \
			    xmppclientsettings.h \
			    xmppstanzaparser.h \
		 	    xmppengine.h \
		   	    xmpptask.h \
			    plainsaslhandler.h \
			    saslcookiemechanism.h \
		     	    xmppengineimpl.h \
			    ratelimitmanager.h 


AM_CPPFLAGS = -DPOSIX

noinst_LTLIBRARIES = libcricketxmpp.la
