libcricketp2pclient_la_SOURCES =  basicportallocator.cc \
			          httpportallocator.cc \
                                  socketmonitor.cc

noinst_HEADERS =                  basicportallocator.h \
                                  socketmonitor.h \
                                  sessionmanagertask.h \
                                  sessionsendtask.h \
				  httpportallocator.h

AM_CPPFLAGS = -I../../.. -DLINUX -DPOSIX -DINTERNAL_BUILD

noinst_LTLIBRARIES = libcricketp2pclient.la
